provarAnt/00D180000008cIAEAY/objects/Corporate_Affairs__c.object
<CustomObject>
    <description>Used to store private notes and attachments</description>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Corporate Affairs</relationshipLabel>
        <relationshipName>Corporate_Affairs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Follow_up_date__c</fullName>
        <label>Follow up date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Related_Account__c</fullName>
        <formula>Case__r.Account.Name</formula>
        <label>Related Account</label>
        <type>Text</type>
    </fields>
    <label>Corporate Affairs</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Corporate Affairs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>